--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <main>
         <header>
-            <h1> Titulo do site</h1>
+            <h1> cursos gratis</h1>
         </header>
     </main>
     <article>
 
         <h2> Artigo 001</h2>
-        <p> Testo artigo 001</p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda sit architecto nobis impedit error rerum repudiandae placeat non eos, distinctio expedita optio omnis quo labore. Facere aliquam repellendus debitis autem!</p>
     </article>
     <article>
 
-        <h2> Artigo 002</h2>
+        <h2> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam vitae voluptatum, dolorem, animi mollitia harum nulla illo voluptas vel, temporibus praesentium pariatur corrupti tempore? Voluptatem omnis delectus id enim sequi.</h2>
         <p> Testo artigo 002</p>
     </article>
 
