--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Teste</title>
-</head>
+    <title> teste total</title>
+<link rel="stylesheet" href="estilos/style.css"></head>
 
 <body>
     <main>
