--- a/index.html
+++ b/index.html
@@ -5,26 +5,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> teste total</title>
-<link rel="stylesheet" href="estilos/style.css"></head>
+    <title> 5 Curiosidades Dragon Ball</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
 
 <body>
     <main>
         <header>
-            <h1> cursos gratis</h1>
+            <h1> 5 Curiosidades Sobre Dragon Ball</h1>
         </header>
     </main>
-    <article>
-
-        <h2> Artigo 001</h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda sit architecto nobis impedit error rerum repudiandae placeat non eos, distinctio expedita optio omnis quo labore. Facere aliquam repellendus debitis autem!</p>
+    <article><img src="/imagens/goku-instinto-superior-wallpaper-850x560.jpg" alt="Goku">
+        <p>Dragon Ball, com certeza foi um dos animes que fizeram parte da sua infância. Era emocionante assistir na
+            televisão, quem nunca ajudou o Goku a fazer uma Genki-Dama? O impacto cultural que Dragon Ball teve no mundo
+            dos animes e mangás são impressionantes, autores famosos como Masashi Kishimoto, criador de naruto, se
+            inspiraram no trabalho de Akira Toriyama para fazer a suas obras. Cconfira abaixo 10 curiosidades que você
+            não sabia sobre Dragon Ball:</p>
     </article>
     <article>
 
-        <h2> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam vitae voluptatum, dolorem, animi mollitia harum nulla illo voluptas vel, temporibus praesentium pariatur corrupti tempore? Voluptatem omnis delectus id enim sequi.</h2>
-        <p> Testo artigo 002</p>
+        <h2> 1. O criador se inspirou em outro anime</h2>
+        <img src="/imagens/imagem 2.jpg" alt="Dragon ball">
+        <p> Toriyama tinha escrito um mangá anteriormente chamado Dragon Boy, um ano antes de criar Dragon Ball. Em
+            Dragon Boy o personagem principal treina artes marciais em um bosque e recebe uma missão de seu mestre para
+            levar uma princesa em segurança para a terra natal dela.</p>
     </article>
+    <article>
 
+        <h2>2 - Arale Norimaki</h2>
+        <img src="/imagens/imagem 3.jpg" alt="Dragon ball">
+        <p> Arale Norimaki é o protagonista de Dr. Slump, um mangá escrito por Toriyama antes de Dragon Ball, que mais
+            tarde é adaptada para uma série de anime.
+
+            Em Dragon Ball, Arale tem sua primeira aparição no episódio 55 (O Caminho Para a Vila Pinguim). Arale tem
+            diversas participações em Dragon Ball posteriormente, aparecendo até mesmo em Dragon Ball Super.</p>
+    </article>
+    <article>
+
+        <h2> 3- Quem dubla Goku é uma mulher</h2>
+        <img src="/imagens/imagem 4.jpg" alt="Dragon ball">
+        <p> Você sabia que quem dubla Goku no Japão é uma mulher? A dubladora de Goku se chama Masako Nozawa, A sua
+            primeira dublagem para o personagem foi em 1993. Recentemente ela ganhou um prêmio por ser a dubladora com
+            maior tempo de carreira de todos os tempos.</p>
+    </article>
+    <article>
+
+        <h2> 4 - Por que Z?</h2>
+        <img src="/imagens/imagem 5.jpg" alt="Dragon ball">
+        <p> Esse título foi escolhido por Toriyama, porque Z é a última letra do alfabeto, então Toriyama queria
+            finalizar a história de Dragon Ball, uma vez que a equipe de produção estava cogitando em colocar Gohan no
+            personagem principal.</p>
+    </article>
+    <article>
+
+        <h2>5 - Por que GT?
+
+        </h2>
+        <img src="/imagens/imagem 6.jpg" alt="Dragon ball">
+        <p> A história de Dragon Ball GT envolve diversas viagens espaciais, e GT na linguagem automobilística significa
+            Gran Turismo, por esse motivo Toriyama achou o título ideal para série, já que o acontecimento do GT seria
+            durante as viagens espaciais de Goku.</p>
+    </article>
 
 </body>
 
