--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 <body>
     <main>
         <header>
-            <h1> 5 Curiosidades Sobre Dragon Ball</h1>
+            <h1> 5. Curiosidades Sobre Dragon Ball</h1>
         </header>
-    </main>
-    <article><img src="/imagens/goku-instinto-superior-wallpaper-850x560.jpg" alt="Goku">
+            </main>
+    <br><br>
+    <div class="container">
+    <article>
+        <img class= imagens src="/imagens/goku-instinto-superior-wallpaper-850x560.jpg" alt="Goku">
         <p>Dragon Ball, com certeza foi um dos animes que fizeram parte da sua infância. Era emocionante assistir na
             televisão, quem nunca ajudou o Goku a fazer uma Genki-Dama? O impacto cultural que Dragon Ball teve no mundo
             dos animes e mangás são impressionantes, autores famosos como Masashi Kishimoto, criador de naruto, se
@@ -25,7 +28,7 @@
     <article>
 
         <h2> 1. O criador se inspirou em outro anime</h2>
-        <img src="/imagens/imagem 2.jpg" alt="Dragon ball">
+        <img class= imagens src="/imagens/imagem 2.jpg" alt="Dragon ball">
         <p> Toriyama tinha escrito um mangá anteriormente chamado Dragon Boy, um ano antes de criar Dragon Ball. Em
             Dragon Boy o personagem principal treina artes marciais em um bosque e recebe uma missão de seu mestre para
             levar uma princesa em segurança para a terra natal dela.</p>
@@ -33,7 +36,7 @@
     <article>
 
         <h2>2 - Arale Norimaki</h2>
-        <img src="/imagens/imagem 3.jpg" alt="Dragon ball">
+        <img class= imagens src="/imagens/imagem 3.jpg" alt="Dragon ball">
         <p> Arale Norimaki é o protagonista de Dr. Slump, um mangá escrito por Toriyama antes de Dragon Ball, que mais
             tarde é adaptada para uma série de anime.
 
@@ -43,7 +46,7 @@
     <article>
 
         <h2> 3- Quem dubla Goku é uma mulher</h2>
-        <img src="/imagens/imagem 4.jpg" alt="Dragon ball">
+        <img class= imagens src="/imagens/imagem 4.jpg" alt="Dragon ball">
         <p> Você sabia que quem dubla Goku no Japão é uma mulher? A dubladora de Goku se chama Masako Nozawa, A sua
             primeira dublagem para o personagem foi em 1993. Recentemente ela ganhou um prêmio por ser a dubladora com
             maior tempo de carreira de todos os tempos.</p>
@@ -51,7 +54,7 @@
     <article>
 
         <h2> 4 - Por que Z?</h2>
-        <img src="/imagens/imagem 5.jpg" alt="Dragon ball">
+        <img class= imagens src="/imagens/imagem 5.jpg" alt="Dragon ball">
         <p> Esse título foi escolhido por Toriyama, porque Z é a última letra do alfabeto, então Toriyama queria
             finalizar a história de Dragon Ball, uma vez que a equipe de produção estava cogitando em colocar Gohan no
             personagem principal.</p>
@@ -61,11 +64,22 @@
         <h2>5 - Por que GT?
 
         </h2>
-        <img src="/imagens/imagem 6.jpg" alt="Dragon ball">
+        <img class= imagens src="/imagens/imagem 6.jpg" alt="Dragon ball">
         <p> A história de Dragon Ball GT envolve diversas viagens espaciais, e GT na linguagem automobilística significa
             Gran Turismo, por esse motivo Toriyama achou o título ideal para série, já que o acontecimento do GT seria
             durante as viagens espaciais de Goku.</p>
     </article>
+
+    <div class="container">
+
+        <h2> Abertura do Anime</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/5hcbImg97UI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+</div>
+ <div class="assinatura">
+    <h3>Desenvolvido por Maique Silva</h3>
+ </div>
+
 
 </body>
 
